[package]
name = "async-fat32"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## async-fat32/Cargo.toml-COMMENT: 2022-11-04 Fri Andre :] change the .cnpmjs.org -> github
async-trait = { git = "https://github.com/HUST-OS/async-trait.git", rev = "c612a647aa" }
spin = "0.7"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bit_field = "0.10"
bitflags = "1.2"
async-mutex = { path = "../async-mutex", features = ["kernel"] }
