[package]
name = "shared-scheduler"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
## tornado-kernel/Cargo.toml-COMMENT: 2022-11-04 Fri Andre :] remove the .cnpmjs.org, use the github.
## tornado-kernel/Cargo.toml-COMMENT: 2022-11-04 Fri Andre :] use the HUST-OS.
## riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "7e9d2e5b", features = ["inline-asm"] }
## riscv = { git = "https://github.com/HUST-OS/riscv.git"}
riscv = "0.9.0"
lazy_static = { version = "1", features = ["spin_no_std"] }
r0 = "1.0"
buddy_system_allocator = "0.6"
